# cineTrack

./: .env.example  .gitignore  .gitleaks.toml  README.md  SECURITY_AUDIT.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  s_2024 psql -U cinetrack_user -d cinetrack -h 127.0.0.1 -p 5433 -A -t -c SELECT column_name || '|' || data_type FROM information_schema.columns WHERE table_name='media'
.github/: dependabot.yml
backend/: .dockerignore  Cargo.toml  Dockerfile.dev  Dockerfile.prod
backend/benches/: hot_paths.rs
backend/migrations/: 20240101000000_initial_schema.sql  20240102000000_add_refresh_token_index.sql  20240103000000_drop_oauth_access_token.sql  20240104000000_refresh_token_rotation_state.sql  20240105000000_harden_data_constraints.sql  20240106000000_normalize_user_emails.sql  20240107000000_password_reset_tokens.sql  20240108000000_session_metadata.sql  20240109000000_import_jobs.sql  20240110000000_watch_history_covering_index.sql  20240111000000_constrain_usernames.sql  20240112000000_follow_requests.sql  20240113000000_tracking_history_consistency.sql  20240114000000_harden_import_jobs.sql  20240115000000_cache_episode_fetches.sql  20240116000000_private_lists_by_default.sql  20240117000000_orphan_media_cleanup.sql  20240118000000_social_graph_indexes.sql  20240119000000_activity_feed_index.sql  20240120000000_user_search_index.sql  20240121000000_notifications.sql  20240122000000_persistent_catalog_cache.sql  20240123000000_local_catalog_search.sql  20240124000000_catalog_id_inventory.sql  20240125000000_catalog_tv_adult_unknown.sql  20240126000000_catalog_titles.sql  20240127000000_catalog_hydration_state.sql  20240128000000_media_title_aliases.sql  20240129000000_episode_plans.sql  20240130000000_regional_release_dates.sql  20240131000000_release_schedule_sync.sql  20240132000000_episode_plan_watch_invariant.sql  20240201000000_watch_history_user_episode_index.sql  20240202000000_unique_password_reset_per_user.sql  20240203000000_push_notifications.sql  20240204000000_email_verification.sql  20240205000000_two_factor_auth.sql  20240206000000_refresh_token_families.sql  20240207000000_private_users_before_verification.sql  20240208000000_totp_replay_and_login_throttle.sql  (+3 more)
backend/src/: config.rs  db.rs  errors.rs  lib.rs  main.rs  metrics.rs
backend/src/dto/: auth.rs  calendar.rs  client_error.rs  common.rs  import.rs  media.rs  mod.rs  notification.rs  push.rs  social.rs  stats.rs  tracking.rs  user.rs  validation.rs
backend/src/middleware/: auth.rs  rate_limit.rs  request_id.rs
backend/src/models/: media.rs  mod.rs  social.rs  tracking.rs  user.rs
backend/src/routes/: assets.rs  auth.rs  calendar.rs  client_errors.rs  health.rs  history.rs  import.rs  lists.rs  media.rs  mod.rs  notifications.rs  push.rs  stats.rs  tracking.rs  users.rs
backend/src/services/: auth.rs  catalog.rs  catalog_hydration.rs  completion.rs  discovery.rs  email.rs  importer.rs  media_cache.rs  mod.rs  notifications.rs  password_breach.rs  push.rs  quota.rs  release_schedule.rs  storage.rs  tmdb.rs
backend/src/utils/: availability.rs  jwt.rs  mod.rs  password.rs  totp.rs  totp_secret.rs
backend/tests/: api_tests.rs
bench/: README.md  analyze_capacity.py  run_benchmarks.sh
docs/: backup-credentials.md  incident-response.md
frontend/: .dockerignore  .gitignore  Dockerfile.dev  Dockerfile.prod  index.html  nginx-main.conf  nginx-spa.conf  package-lock.json  package.json  playwright.config.ts  playwright.pwa.config.ts  playwright.realstack.config.ts  vite.config.ts
mobile/: .env.example  PLAY_DATA_SAFETY.md  README.md  STORE_RELEASE_CHECKLIST.md  app.config.js  app.json  eas.json  package-lock.json  package.json
nginx/: nginx.conf  vazute.micutu.com.conf
scripts/: backup_to_r2.sh  run_tests.sh  (+8 more)
(+229 files in other folders)
