[package]
name = "cinetrack"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
thiserror = "2"
validator = { version = "0.19", features = ["derive"] }
actix-governor = "0.6"
governor = "0.8"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
