[package]
name = "cinetrack"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate", "derive", "macros"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "10"
argon2 = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
thiserror = "2"
validator = { version = "0.19", features = ["derive"] }
actix-governor = "0.6"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls", "hostname"] }
actix-web-prom = "0.9"

[dev-dependencies]
actix-http = "3"
