[package]
name = "cinetrack"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-multipart = "0.8"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate", "derive", "macros"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10.4", default-features = false, features = ["aws_lc_rs"] }
argon2 = "0.5"
# Salt generation uses password_hash's re-exported OsRng, which only exists when
# rand_core/getrandom is on. argon2's own features do not enable it: it was
# being switched on incidentally by another crate's dependency, so declaring it
# here keeps password hashing working no matter what the rest of the graph does.
password-hash = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
dotenvy = "0.15"
thiserror = "2"
validator = { version = "0.20", features = ["derive"] }
actix-governor = "0.10"
rand = "0.10"
sha2 = "0.11"
sha1 = "0.11"
hmac = "0.13"
aes-gcm = "0.11"
hex = "0.4"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls", "hostname"] }
actix-web-prom = "0.10"
prometheus = { version = "0.14", default-features = false }
aws-sdk-s3 = { version = "=1.138.0", default-features = false, features = ["behavior-version-latest", "default-https-client", "http-1x", "rt-tokio"] }
aws-smithy-types = "=1.6.1"

[dev-dependencies]
actix-http = "3"
criterion = { version = "0.8", features = ["async_tokio"] }

[[bench]]
name = "hot_paths"
harness = false
